# Personal-Knowledge-Intelligence-Framework

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: PLAN.md
src/ai_research_assistant/: __init__.py
src/ai_research_assistant/core/embedding/: base.py  bge_embedding.py  config.py  factory.py
src/ai_research_assistant/core/llm/: base.py  config.py  factory.py  ollama_llm.py
src/ai_research_assistant/core/retrieval/: __init__.py  base.py  config.py  dense_retriever.py  factory.py  semantic_retriever.py
src/ai_research_assistant/database/vector_store/: base.py  factory.py  faiss_store.py
tests/: conftest.py  test_embedding.py  test_faiss_store.py  test_llm.py  test_retrieval.py  test_semantic_retriever.py
