[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "fastapi>=0.139.0",
    "markdown>=3.10.2",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ai-research-assistant = "ai_research_assistant:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
